# IndependentStudy

./: April.md  August.md  DailyNotes.md  Independent Study Paper.docx  Literature Review.docx  November.md  October.md
Checkers/MCTS/: Board.cpp  Board.h  CMakeLists.txt  Checkers.cpp  Checkers.h  GameState.cpp  GameState.h  singlefile.cpp
Clickomania/AStar/: Grid.cpp  Grid.h  clickomania.cpp
Clickomania/IDAStar/: CMakeLists.txt  GameState.cpp  GameState.h  Grid.cpp  Grid.h  clickomania.cpp  clickomania.h
Clickomania/MCTS/: CMakeLists.txt  GameState.cpp  GameState.h  Grid.cpp  Grid.h  clickomania.cpp  clickomania.h  input2.txt  singlefile.cpp
Daily Notes/: April.md  August.md  March.md  November.md  October.md  September.md
